export enum EnvironmentObjectType {
  OBSTACLE,
  BASE,
  COLLECTABLE,
}
